header and foter made responsive

--- a/holidays.html
+++ b/holidays.html
@@ -138,6 +138,11 @@ input[type="checkbox"] {
         <div class="header-left">
            <a href="index.html"><p id="p" style="margin: 0;">BAKE<span style="font-weight: 400; font-size: 25px;">TIMES</span></p></a> 
         </div>
+
+
+        <button id="menu-toggle" class="m-btn" aria-label="Open menu" aria-expanded="false" aria-controls="header-nav">☰</button>
+
+
         <div class="header-middle">
                 <a href="recipes.html">RECIPES</a>
                 <a href="bakingbasics.html">BAKING BASICS</a>
@@ -170,27 +175,9 @@ input[type="checkbox"] {
     <p>Christmas is a time for baking delicious treats and spending time with family.</p>
   </div>
    
-    <div class="christmas-recipes">
-    <div class="cr-cards">
-        <div class="card">
-            <a href=""><img src="tumbnail-images/Gingerbread.png" alt="Gingerbread Cookies"></a>
-            <p>gingerbread cookies</p>
-        </div>
-
-        <div class="card">
-            <a href=""><img src="tumbnail-images/Fruit Cake.png" alt="Christmas Fruit Cake"></a>
-            <p>Christmas Fruit Cake</p>
-        </div>
-
-        <div class="card">
-            <a href=""><img src="tumbnail-images/Yule Log.png" alt="Yule Log Cake"></a> 
-            <p>Yule Log Cake</p>
-        </div>
-
-        <div class="card">
-            <a href=""><img src="tumbnail-images/Sugar Cookies.png" alt="Sugar Cookies"></a>
-            <p>Sugar Cookies</p>
-        </div>
+<div class="christmas-recipes">
+    <div class="cr-cards js-recipes">
+        
     </div>
 </div>
 </div>
@@ -207,27 +194,8 @@ input[type="checkbox"] {
     </div>
 
     <div class="thanksgiving-recipes">
-        <div class="cr-cards">
-            <div class="card">
-                <a href=""><img src="tumbnail-images/Pumpkin Pie.png" alt="Pumpkin Pie"></a>
-                <p>Pumpkin Pie</p>
-            </div>
-
-            <div class="card">
-                <a href=""><img src="tumbnail-images/Pecan Pie.png" alt="Pecan Pie"></a>
-                <p>Pecan Pie</p>
-            </div>
-
-            <div class="card">
-                <a href=""><img src="tumbnail-images/Apple Cider Donuts.png" alt="Apple Cider Donuts"></a>
-                <p>Apple Cider Donuts</p>
-            </div>
-
-            <div class="card">
-                <a href=""><img src="tumbnail-images/Cornbread.png" alt="Cornbread"></a>
-                <p>Cornbread</p>
-            </div>
-
+        <div class="cr-cards js-recipes">
+           
         </div>
 </div>
 </div>
@@ -243,26 +211,7 @@ input[type="checkbox"] {
   </div>
 
     <div class="easter-recipes">
-        <div class="cr-cards">
-            <div class="card">
-                <a href=""><img src="tumbnail-images/Carrot Walnut Cake.png" alt="Carrot Cake"></a>
-                <p>Carrot Cake</p>
-            </div>
-
-            <div class="card">
-                <a href=""><img src="tumbnail-images/Chocolate Eggs.png" alt="Chocolate Eggs"></a>
-                <p>Chocolate Eggs</p>
-            </div>
-
-            <div class="card">
-                <a href=""><img src="tumbnail-images/Hot Cross Buns.png" alt="Hot Cross Buns"></a>
-                <p>Hot Cross Buns</p>
-            </div>
-
-            <div class="card">
-                <a href=""><img src="tumbnail-images/Easter Cookies.png" alt="Easter Cookies"></a>
-                <p>Easter Cookies</p>
-            </div>
+        <div class="cr-cards js-recipes">
 
         </div>
     </div>
@@ -295,5 +244,11 @@ input[type="checkbox"] {
             <a href="#" class="fa fa-instagram footer-link"></a>
         </div>
     </footer>
+
+
+
+    <script src="scripts/header.js"></script>
+    <script src="scripts/data's/recipe-Collections.js"></script>
+    <script src="scripts/holidays.js"></script>
 </body>
 </html>
