--- a/bakingbasics.html
+++ b/bakingbasics.html
@@ -48,6 +48,11 @@
         <div class="header-left">
            <a href="index.html"><p id="p" style="margin: 0;">BAKE<span style="font-weight: 400; font-size: 25px;">TIMES</span></p></a> 
         </div>
+
+
+        <button id="menu-toggle" class="m-btn" aria-label="Open menu" aria-expanded="false" aria-controls="header-nav">☰</button>
+
+
         <div class="header-middle">
                 <a href="recipes.html">RECIPES</a>
                 <a href="bakingbasics.html">BAKING BASICS</a>
@@ -161,5 +166,9 @@
             <a href="#" class="fa fa-instagram footer-link"></a>
         </div>
     </footer>
+
+
+
+    <script src="scripts/header.js"></script>
 </body>
 </html>
