--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="subscription-container">
         <div>
             <h2 style="font-size: 36px; margin: 0;">Weekly Recipes Delivered to Your Inbox</h2>
-            <p style="font-size: 20px;">Subscribe today and get delightful baking recipes,
+            <p style="font-size: 20px; text-align: justify; text-justify: inter-word;">Subscribe today and get delightful baking recipes,
                 handy tips, and kitchen inspiration sent directly to your inbox.
                 Discover new ways to make every bake extra special!</p>
         </div>
