fixed the social links

--- a/holidays.html
+++ b/holidays.html
@@ -194,9 +194,9 @@ input[type="checkbox"] {
                 <a href="reviews.html">REVIEWS</a>       
         </div>
         <div class="header-right">
-                <a href="#" class="fa fa-facebook"></a>
-                <a href="#" class="fa fa-twitter"></a>
-                <a href="#" class="fa fa-instagram"></a>
+                <a href="https://facebook.com" class="fa fa-facebook"></a>
+                <a href="https://twitter.com" class="fa fa-twitter"></a>
+                <a href="https://instagram.com" class="fa fa-instagram"></a>
         </div>
     </div>
 
@@ -282,9 +282,9 @@ input[type="checkbox"] {
     <footer>
         <p style="margin: 0; font-size: 16px;">© 2025 BAKE TIMES. All rights reserved.</p>
         <div>
-            <a href="#" class="fa fa-facebook footer-link"></a>
-            <a href="#" class="fa fa-twitter footer-link"></a>
-            <a href="#" class="fa fa-instagram footer-link"></a>
+            <a href="https://facebook.com" class="fa fa-facebook footer-link"></a>
+            <a href="https://twitter.com" class="fa fa-twitter footer-link"></a>
+            <a href="https://instagram.com" class="fa fa-instagram footer-link"></a>
         </div>
     </footer>
 
