--- a/bakingbasics.html
+++ b/bakingbasics.html
@@ -153,9 +153,9 @@
                 <a href="reviews.html">REVIEWS</a>       
         </div>
         <div class="header-right">
-                <a href="#" class="fa fa-facebook"></a>
-                <a href="#" class="fa fa-twitter"></a>
-                <a href="#" class="fa fa-instagram"></a>
+                <a href="https://facebook.com" class="fa fa-facebook"></a>
+                <a href="https://twitter.com" class="fa fa-twitter"></a>
+                <a href="https://instagram.com" class="fa fa-instagram"></a>
         </div>
     </div>
 
@@ -253,9 +253,9 @@
     <footer>
         <p style="margin: 0; font-size: 16px;">© 2025 BAKE TIMES. All rights reserved.</p>
         <div>
-            <a href="#" class="fa fa-facebook footer-link"></a>
-            <a href="#" class="fa fa-twitter footer-link"></a>
-            <a href="#" class="fa fa-instagram footer-link"></a>
+            <a href="https://facebook.com" class="fa fa-facebook footer-link"></a>
+            <a href="https://twitter.com" class="fa fa-twitter footer-link"></a>
+            <a href="https://instagram.com" class="fa fa-instagram footer-link"></a>
         </div>
     </footer>
 
