all contents of recipes are added

--- a/holidays.html
+++ b/holidays.html
@@ -291,7 +291,7 @@ input[type="checkbox"] {
 
 
     <script src="scripts/header.js"></script>
-    <script src="scripts/data's/recipe-Collections.js"></script>
+    <script src="scripts/data/recipe-Collections.js"></script>
     <script src="scripts/holidays.js"></script>
 </body>
 </html>
