--- a/recipes.html
+++ b/recipes.html
@@ -188,7 +188,7 @@
     </footer>
 
 <script src="scripts/header.js"></script>
-<script src="scripts/data's/recipe-Collections.js"></script>
+<script src="scripts/data/recipe-Collections.js"></script>
 <script src="scripts/recipe.js"></script>
 
 </body>
