--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </footer>
 
     <script src="scripts/header.js"></script>
-    <script src="scripts/data's/recipe-Collections.js"></script>
+    <script src="scripts/data/recipe-Collections.js"></script>
     <script src="scripts/home-Page.js"></script>
 </body>
 </html>
