--- a/recipe-template.html
+++ b/recipe-template.html
@@ -156,7 +156,7 @@
     }
 
 
-    .qa-form {
+.qa-form {
     background-color: #e8f5e9;
     margin: 30px clamp(16px, 8vw, 103px);
     display: grid;
@@ -166,6 +166,7 @@
     padding: clamp(23px, 4vw, 68px);
     gap: clamp(40px, 6vw, 150px);
     line-height: 1.7;
+    border-radius: 4px;
 }
 
 .qa-form-title h2 {
