form submit action

--- a/holidays.html
+++ b/holidays.html
@@ -268,7 +268,7 @@ input[type="checkbox"] {
                 Make every holiday bake warm, joyful, and unforgettable!</p>
         </div>
         <div>
-            <form action="#" class="subscription-form">
+            <form action="#" class="subscription-form js-feedback-form" method="post" data-confirm-duration="3500">
                 <div>
                     <input class="input-ne" type="text" placeholder="Name*" required>
                     <input class="input-ne" type="email" placeholder="Email*" required>
@@ -293,5 +293,6 @@ input[type="checkbox"] {
     <script src="scripts/header.js"></script>
     <script src="scripts/data/recipe-Collections.js"></script>
     <script src="scripts/holidays.js"></script>
+    <script src="scripts/form-feedback.js"></script>
 </body>
 </html>
