--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 Discover new ways to make every bake extra special!</p>
         </div>
         <div>
-            <form action="#" class="subscription-form">
+            <form action="#" class="subscription-form js-feedback-form" method="post" data-confirm-duration="3500">
                 <div>
                     <input class="input-ne" type="text" placeholder="Name*" required>
                     <input class="input-ne" type="email" placeholder="Email*" required>
@@ -144,5 +144,6 @@
     <script src="scripts/header.js"></script>
     <script src="scripts/data/recipe-Collections.js"></script>
     <script src="scripts/home-Page.js"></script>
+    <script src="scripts/form-feedback.js"></script>
 </body>
 </html>
