added admin control

--- a/recipe-template.html
+++ b/recipe-template.html
@@ -281,9 +281,9 @@ input::placeholder, textarea::placeholder {
     </div>
     <div class="form-content">
         <form class="js-feedback-form" action="#" method="post" data-confirm-duration="3500">
-            <input type="text" placeholder="Enter Your Name..">
-            <input type="text" placeholder="Which recipe is your question about?">
-            <textarea name="qa" id="qa" placeholder="Write your question here…"></textarea>
+            <input type="text" placeholder="Enter Your Name.." required>
+            <input type="text" placeholder="Which recipe is your question about?" required>
+            <textarea name="qa" id="qa" placeholder="Write your question here…" required></textarea>
             <button type="submit" class="qa-btn">Submit</button>
             <button type="reset" class="qa-btn">reset</button>
         </form>
