--- a/reviews.html
+++ b/reviews.html
@@ -419,8 +419,8 @@ input::placeholder, textarea::placeholder {
     </div>
     <div class="form-content">
         <form class="js-feedback-form" action="/reviews" method="post" data-confirm-duration="4000">
-            <input type="text" placeholder="Enter Your Name..">
-            <textarea name="review" id="review" placeholder="Enter your review.."></textarea>
+            <input type="text" placeholder="Enter Your Name.." required>
+            <textarea name="review" id="review" placeholder="Enter your review.." required></textarea>
             
             <!-- Star Rating -->
             <div class="star-rating">
