Fixed few bugs and Removed Unwanted Data's.

--- a/bakingbasics.html
+++ b/bakingbasics.html
@@ -25,6 +25,12 @@
     object-fit: cover;
     justify-self: end; 
 }
+
+.hero-img {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+}
 .hero-content {
     max-width: 528px;
 }
